discussion/kv_engine/155349/155349_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-43677: Add PCH Object Library

Add an object library containing a pre-compiled header that includes
headers commonly used throughout the codebase. This commit is a
proof of concept that use pre-compiled headers in various targets
throughout the code base.

Before:
Analyzing build trace from 'baseline.bin'...
**** Time summary:
Compilation (1066 times):
  Parsing (frontend):         3028.3 s
  Codegen & opts (backend):    801.5 s

After:
Analyzing build trace from 'first.bin'...
**** Time summary:
Compilation (1072 times):
  Parsing (frontend):         2761.4 s
  Codegen & opts (backend):    789.5 s

Change-Id: I182fa5d0058849e02ff8d473e8477aa51d5d999f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-06-09 14:21:17.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-09 14:44:47.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9678/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9678/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9678/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8274/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36640/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/214/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31312/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11401/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10326/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11253/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11672/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19257/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-09 15:53:19.000000000
Message: 
Patch Set 7:

> Patch Set 5:
> 
> This is mostly ready for review. There is an issue with clang-tidy picking up the diff via git and trying to compile a header for which it has no cmake info (which is disabled as it doesn't appear to be able to cope with precompiled headers). I'm tempted for now to override it, but it means that any change to precompiled-headers.h will require a manual verification. We could potentially try to pass some regex (iregex?) to clang-tidy-diff to alter what it includes and try to avoid it processing the file, but unfortunately it doesn't have an option to just not.

I vaguely recall richard was looking at something like that (ignoring certain files). Certainly I don't think it should block merging this, given precompiled_headers.h will likely be reasonably static medium-term.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-09 16:04:25.000000000
Message: 
Patch Set 7: Code-Review-1

(6 comments)
Line:140, CMakeLists.txt -> If you use an INTERFACE library (which is allowed to not define any source files) can you about having to add precompiled_headers.cc ?

Line:150, CMakeLists.txt -> While the name `reuse_pch_kv` is correct in what it does under the covers; it's not necessarily very intuitive where it's used as to what the function is for.

What about naming something like `kv_enable_pch(target)` - along the same lines as cb_enable_unity_build() ?

Line:27, precompiled_headers.h -> Can you raise an MB to track this? I suspect using pimpl for this will be better overall than having to precompile it (note we'll still be paying a bunch of template expansion cost for it, even if it's precompiled).

Line:29, tests/mcbp/CMakeLists.txt -> While we might want to get rid of this also, I think we should leave in for now so we can measure the pch speedup in isolation.

Line:82, tests/testapp/CMakeLists.txt -> ditto

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-09 16:07:44.000000000
Message: 
Patch Set 7:

(1 comment)
Line:29, tests/mcbp/CMakeLists.txt -> I'll address other comments later, but this is actually necessary as we need the same flags in the pch target as in those that reuse from it

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-09 16:14:34.000000000
Message: 
Patch Set 7:

(1 comment)
Line:29, tests/mcbp/CMakeLists.txt -> Ok. In that case could you remove these in a separate initial patch, so we can see just the pch numbers please?

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-10 09:00:43.000000000
MISMATCHED INLINE COMMENT
Line:140, CMakeLists.txt -> No, fails with a "cmake_pch.hxx needed by ..., missing and no known rule to make it" error.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-10 09:04:37.000000000
MISMATCHED INLINE COMMENT
Line:140, CMakeLists.txt -> Bof.
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-10 09:00:43.000000000
MISMATCHED INLINE COMMENT
Line:150, CMakeLists.txt -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-10 09:00:43.000000000
MISMATCHED INLINE COMMENT
Line:27, precompiled_headers.h -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-10 09:00:43.000000000
MISMATCHED INLINE COMMENT
Line:29, tests/mcbp/CMakeLists.txt -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-10 09:00:43.000000000
MISMATCHED INLINE COMMENT
Line:82, tests/testapp/CMakeLists.txt -> Done
----------------------------------------------------------------------------------------------------------------------
